<resources>
    <string name="app_name">GameBoardProj</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="setmc">Please set the Main Claim</string>
    <string name="confirm">CONFIRM</string>
    <string name="goBackFromVoteResult">Go Back</string>
    <string name="userid">User ID</string>
    <string name="vote">Vote</string>
    <string name="student_title">WELCOME TO THE GAME BOARD \n DAN SMITH</string>
    <string name="main_claim">THE MAIN CLAIM OF TODAY IS: \n\n "If a person is in fact going to do one thing, then it is not the case that they could do something else"</string>
    <string name="vote_title">Please click a button to vote</string>
    <string name="btn_agree">AGREE</string>
    <string name="btn_disagree">DISAGREE</string>
    <string name="btn_join_group">SUBMIT A RIP</string>
    <string name="title_join_group">Click below to submit a Reason In Play (RIP)</string>
    <string name="title_rip">Please enter a Reason in Play (RIP)</string>
    <string name="enter_message">Type a message</string>
    <string name="example_rip">Please type a reason in play</string>
    <string name="create_rip">Create a RIP</string>
    <string name="registraion">Don\'t have an account? Click here to register.</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="register">REGISTER</string>
    <string name="loginHint">Please Login first</string>
    <string name="registerTitle">Please Register</string>
    <string name="mcTitle">Main Claim</string>
    <string name="checkVote">Check the vote results</string>
    <string name="startScrimmage">Start Bout of Logical Scrimmage</string>
    <string name="timer">180</string>
    <string name="endScrimmage">End Bout of Logical Scrimmage</string>
    <string name="haveAccount">Already have an account? Click here to Login</string>
    <string name="rip">RIP</string>
    <string name="selectRip">SELECT THIS RIP</string>
    <string name="leaderRole">Leader</string>
    <string name="playerRole">Player</string>
    <string name="update_rip">update RiP</string>
    <string name="studentid">Student ID</string>
    <string name="vote_rip_button">Vote</string>
    <string name="title_activity_game_board_right">GameBoardRightActivity</string>
    <string name ="person_per_group">Enter number of students per group</string>
    <string name ="btn_create_groups">Click to create groups</string>
    <string name="check_result">Check Results</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="end_game">End Game</string>
    <string name="initial_vote">Initial Vote</string>
    <string name="trues">True</string>
    <string name="falses">False</string>
    <string name="final_vote">Final Vote</string>
    <string name="main_claim_goes_here">Main Claim Goes Here</string>
    <string name="affirm">Affirm</string>
    <string name="refute">Refute</string>
    <string name="mc_false">MC FALSE</string>
    <string name="Left">L</string>
    <string name="current_reason_in_play">Current Reason In Play</string>
    <string name="update">Update</string>
    <string name="end_round">End Round</string>
    <string name="change_mc_vote">Change MC Vote</string>
    <string name="mc_true">MC TRUE</string>
    <string name="Right">R</string>

</resources>
